examples/error/za8474_err1.jle
#CostOfaRug.jle
# This Program calculates the cost of a rug

display "Let's calculate the cost of a rug", nl;

Display "Enter the length and width in feet";       #Error 1 capitalized the display keyword
input l, w;

display "What is the cost of material per square foot?", nl;
input c;

cost = l*w*c;
    
display "The cost of the rug is $", cost;